      would.

      \item \code{duplicated()} ignored \code{fromLast} for a
      one-column data frame.  (\PR{14742})

      \item \code{source()} and related functions did not put the correct
      timestamp on the source references; \code{srcfilecopy()} has gained
      a new argument \code{timestamp} to support this fix. (\PR{14750})

      \item LaTeX conversion of Rd files did not correctly handle
      preformatted backslashes.  (\PR{14751})

      \item HTML conversion of Rd files did not handle markup within
      tabular cells properly.  (\PR{14708})

      \item \code{source()} on an empty file with \code{keep.source =
	TRUE} tried to read from \code{stdin()}, in \R 2.14.0 only.
      (\PR{14753})

      \item The code to check Rd files in packages would abort if
      duplicate description sections were present.
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.14.0}{
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item All packages must have a namespace, and one is created on
      installation if not supplied in the sources.  This means that any
      package without a namespace must be re-installed under this
      version of \R (but previously-installed data-only packages without
      \R code can still be used).

      \item The \code{yLineBias} of the \code{X11()} and
      \code{windows()} families of devices has been changed from 0.1 to
      0.2: this changes slightly the vertical positioning of text in the
      margins (including axis annotations).  This is mainly for
      consistency with other devices such as \code{quartz()} and
      \code{pdf()}.  (Wish of \PR{14538}.)

      There is a new graphics parameter \code{"ylbias"} which
      allows the y-line bias of the graphics device to be tweaked,
      including to reproduce output from earlier versions of \R.

      \item Labeling of the p-values in various anova tables has been
      rationalized to be either \code{"Pr(>F)"} or \code{"Pr(>Chi)"}