@@ -33,7 +33,8 @@ parse <- function(file = "", n = NULL, text = NULL, prompt = "?",
             	text <- readLines(file)
             	close(file)
             	file <- stdin()
-        	srcfile <- srcfilecopy(filename, text, file.info(filename)[1,"mtime"])
+        	srcfile <- srcfilecopy(filename, text, file.info(filename)[1,"mtime"],
+        	                       isFile = TRUE)
             } else 	
                 on.exit(close(file))
         }
