@@ -651,6 +651,10 @@
       \item \code{source()} and related functions did not put the correct
       timestamp on the source references; \code{srcfilecopy()} has gained
       a new argument \code{timestamp} to support this fix. (\PR{14750})
+      
+      \item \code{srcfilecopy()} has gained a new argument \code{isFile}
+      and now records the working directory, to allow debuggers to find
+      the original source file.  (\PR{14826})
 
       \item LaTeX conversion of Rd files did not correctly handle
       preformatted backslashes.  (\PR{14751})
